--- a/App/Derived/InfoPlists/WhisperBoard-Info.plist
+++ b/App/Derived/InfoPlists/WhisperBoard-Info.plist
@@ -86,6 +86,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-	<string>Dark</string>
+	<string>Light</string>
 </dict>
 </plist>
